HIVE-29036: Support ViewCatalog through Iceberg REST API (#5888)